tests/snapshots/run_wpt_conformance__coreml_linear_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
linear.https.any.js linear float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([125, 188, 155, 198, 210, 191, 153, 196, 60, 68, 50, 66, 126, 67, 125, 196, 104, 70, 91, 196, 210, 197, 113, 67, 85, 198, 74, 72, 196, 198, 111, 70, 219, 200, 73, 65, 55, 69, 212, 72, 92, 200, 65, 183, 255, 72, 120, 198]);
  }

  nodes {
    [linearOutput] = linear(operand_0, alpha=1.0, beta=0.0, label="");
  }

  outputs { linearOutput; }
}
